# haskell

./: .gitignore  README.md  arith3broken.hs  chapter7.hs  chapter9.hs  functionWithLet.hs  functionWithWhere.hs  isPositive.hs  monads1.hs  palindrome.hs  pf.hs  recursion.hs  rvrs.hs  sing.hs  taek-won-do-2.hs
chapters/: adt.hs  adversity.hs  binaryTree.hs  cipher.hs  eitherLib.hs  eq.hs  hello.hs  letAndWhere.hs  lists.hs  maybeLib.hs  natural.hs  numberish.hs  playground.hs  poemLines.hs  recursion.hs  registerdUser1.hs  registerdUser2.hs  stdLists.hs  taek-won-do.hs  theDatabase.hs  typeClasses.hs  types.hs  validateWord.hs  vigenere.hs  zip.hs
fingerd/: Makefile  finger.db  fingerd.cabal  package.yaml
fingerd/src/: Debug.hs  Main.hs
hangman/: hangman.cabal  stack.yaml
hangman/lib/: Hangman.hs
hangman/src/: Main.hs
hangman/test/: Spec.hs
jsonp/: CHANGELOG.md  Makefile  jsonp.cabal  package.yaml
jsonp/app/: Main.hs
jsonp/input/: families.json  member.json  simple-array.json
jsonp/src/: DomainTypes.hs  Lib.hs  ValueParser.hs
jsonp/test/: Fixture.hs  Spec.hs
morse/: morse.cabal  stack.yaml
morse/src/: Main.hs  Morse.hs
morse/tests/: Spec.hs
multipackage/: stack.yaml
play/: CHANGELOG.md  LICENSE  play.cabal
playground/: CHANGELOG.md  Makefile  README.md  package.yaml  playground.cabal  stack.yaml
playground/app/: CryptoTest.hs  Main.hs
playground/lib/: Addition.hs  AnotherMaybe.hs  BadMonoid.hs  LearnApplicative.hs  LearnFunctors.hs  LearnMonad.hs  LearnParser.hs  LearnReader.hs  LearnState.hs  PlayWithArbitiary.hs  RandomExample.hs  RandomExample2.hs  Twinplicative.hs
playground/src/: Addition.hs  BadMonoid.hs  CryptoChannels.hs  LearnApplicative.hs  LearnState.hs  Main.hs  Optional.hs  RandomExample.hs  RandomExample2.hs
playground/test/: ArbitiarySpec.hs  LearnApplicativeSpec.hs  LearnFunctorsSpec.hs  Spec.hs
round-table/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.yaml  round-table.cabal  todos.md
round-table/app/: Main.hs
round-table/cypress/: cypress.config.js  package.json  pnpm-lock.yaml
round-table/cypress/e2e/: minesweeper.cy.js
round-table/cypress/scripts/: test_404_detection.sh  tests.sh
round-table/prompts/: testing-guidelines.md
round-table/src/: Lib.hs
round-table/src/Minesweeper/: Game.hs  Web.hs
round-table/static/css/: minesweeper.css
round-table/static/js/: minesweeper.js
round-table/test/: Spec.hs
urlShortener/: Makefile  stack.yaml  urlShortener.cabal
urlShortener/app/: Main.hs
