cabal-version:      2.2
name:               fingerd
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2024 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/fingerd#readme
category:           Web
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

executable fingerd
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:    base >=4.7 && <5

executable fingerd-debug
    main-is:          Debug.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.7 && <5,
        network
