cabal-version:      2.2
name:               hangman
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         haskellbook.com
author:             Chris Allen and Julie Moronuki
homepage:           Chris N Julie
category:           Game
build-type:         Simple
extra-source-files: data/dict.txt

library
    exposed-modules:  Hangman
    hs-source-dirs:   lib
    default-language: Haskell2010
    build-depends:    base >=4.7 && <5

executable hangman
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        random,
        split,
        hangman
