cabal-version:      2.2
name:               jsonp
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2024 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/jsonp#readme
bug-reports:        https://github.com/githubuser/jsonp/issues
description:
    Please see the README on GitHub at <https://github.com/githubuser/jsonp#readme>

build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/githubuser/jsonp

library
    exposed-modules:
        Lib

    hs-source-dirs:   src
    other-modules:    Paths_jsonp
    autogen-modules:  Paths_jsonp
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.7 && <5,
        trifecta,
        parsers

executable jsonp-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_jsonp
    autogen-modules:  Paths_jsonp
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        jsonp

test-suite jsonp-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    Paths_jsonp
    autogen-modules:  Paths_jsonp
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        jsonp
