cabal-version:      >=1.10
name:               morse
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) 2018 Martin Valdes de Leon
maintainer:         m.valdesdeleon@gmail.com
author:             Martin Valdes de Leon
homepage:           https://github.com/mvaldesdeleon/morse#readme
category:           Web
build-type:         Simple
extra-source-files: README.md

library
    exposed-modules:  Morse
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -fwarn-tabs
    build-depends:
        base >=4.7 && <5,
        containers,
        QuickCheck

executable morse
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:    Morse
    default-language: Haskell2010
    ghc-options:      -Wall -fwarn-tabs
    build-depends:
        base >=4.7 && <5,
        containers,
        morse,
        QuickCheck

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-orphans
    build-depends:
        base,
        containers,
        morse,
        QuickCheck
