cabal-version:      2.2
name:               playground
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2024 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/playground#readme
bug-reports:        https://github.com/githubuser/playground/issues
description:
    Please see the README on GitHub at <https://github.com/githubuser/playground#readme>

build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:
        Addition
        Optional
        PlayWithArbitiary
        AnotherMaybe
        LearnFunctors

    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.7 && <5,
        hspec,
        QuickCheck

executable playground
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        playground

test-suite playground-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        playground,
        hspec,
        QuickCheck
