cabal-version:      2.2
name:               urlShortener
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2024 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/urlShortener#readme
bug-reports:        https://github.com/githubuser/urlShortener/issues
description:
    Please see the README on GitHub at <https://github.com/githubuser/urlShortener#readme>

build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/githubuser/urlShortener

executable urlShortener
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_urlShortener
    autogen-modules:  Paths_urlShortener
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        bytestring,
        hedis,
        mtl,
        network-uri,
        random,
        scotty >= 0.22, 
        semigroups,
        text,
        transformers